ob: Fix event map style on mobile

--- a/ob/static/ob/css/event.css
+++ b/ob/static/ob/css/event.css
@@ -15,9 +15,15 @@ article .map {
     width: 300px;
     height: 200px;
     float: right;
-    border: 1px solid #aaa;
 }
 
 article .map img {
     display: block;
+}
+
+@media (max-width: 750px) {
+    article .map {
+        float: initial;
+        width: 100%;
+    }
 }
